@startuml

title __MODELS's Class Diagram__\n

  namespace com.notifications.models {
    class com.notifications.models.CustomStage {
        - xLocationProperty : SimpleDoubleProperty
        - yLocationProperty : SimpleDoubleProperty
        + CustomStage()
        + getBottomRight()
        + getOffScreenBounds()
        + setLocation()
        + setSize()
        + xLocationProperty()
        + yLocationProperty()
    }
  }
  

  namespace com.notifications.models {
    class com.notifications.models.Location {
        - x : double
        - y : double
        + Location()
        + getX()
        + getY()
    }
  }
  

  com.notifications.models.CustomStage -up-|> javafx.stage.Stage
  com.notifications.models.CustomStage o-- com.notifications.models.Location : bottomRight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
